src/test/deca/context/valid/homemade/comp_exacte_bool.deca
// Description :
//test of the exacte comparison between boolean operators
//
// Results :
//ok
{
   int a;
   while(true==false){
     a=1;
   }
}