src/test/deca/context/invalid/homemade/UnaryMinusFailBool.deca
// Description:
//    try a unary minus on a boolean
//
// Results:
//      fail (ok)
//
// History:
//    created 21/01/2020

{
   println(-true);
}